--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,30 @@
 [project]
-name = "frappe_whatsapp"
+name = "frappe-whatsapp"
+version = "0.1.0"
+description = "WhatsApp integration for Frappe with calling functionality and MCP support"
 authors = [
-    { name = "Shridhar Patil", email = "shrip.dev@gmail.com"}
+    {name = "Shridhar Patil", email = "shridhar.p@zerodha.com"},
 ]
-description = "WhatsApp integration for frappe. Use directly meta API's without any 3rd party integration."
-requires-python = ">=3.10"
-readme = "README.md"
-dynamic = ["version"]
 dependencies = [
-    "python-magic~=0.4.24",
+    "frappe",
+    "requests>=2.25.1",
+    "frappe-mcp>=0.1.0",
 ]
+readme = "README.md"
+requires-python = ">=3.8"
 
 [build-system]
-requires = ["flit_core >=3.4,<4"]
-build-backend = "flit_core.buildapi"
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
 
-# These dependencies are only installed when developer mode is enabled
-[tool.bench.dev-dependencies]
-# package_name = "~=1.1.0"
+[tool.setuptools]
+packages = ["frappe_whatsapp"]
 
-[tool.bench.frappe-dependencies]
-frappe = ">=14.0.0"
+[project.optional-dependencies]
+dev = [
+    "pytest>=6.2.5",
+    "pytest-cov>=3.0.0",
+    "black>=22.3.0",
+    "isort>=5.10.1",
+    "flake8>=4.0.1",
+]
